--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
     "firebase": "8.2.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.8.1",
